K8s/Bonus/4_ScenarioA.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: large-systems-django-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: large-systems-django
      env: production
  template:
    metadata:
      labels:
        app: large-systems-django
        env: production
    spec:
      containers:
      - name: large-systems-django
        image: ha33ona/python:main
