K8s/Bonus/4_ScenarioB.yaml
apiVersion: v1
kind: Service
metadata:
  name: large-systems-django-service
spec:
  selector:
    app: large-systems-django
    env: production
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
