K8s/Bonus/StatefulSet_initContainer.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: large-systems-django-statefulset
  labels:
    app: large-systems-django
spec:
  selector:
    matchLabels:
      app: large-systems-django
      env: production
  serviceName: large-systems-django-service
  template:
    metadata:
      labels:
        app: large-systems-django
        env: production
    spec:
      containers:
      - name: large-systems-django
        image: ha33ona/python:test
        resources:
          requests:
            memory: "128Mi"
            cpu: "1"
          limits:
            memory: "128Mi"
            cpu: "1"
        volumeMounts:
        - name: my-volume
          mountPath: /data
      volumes:
      - name: my-volume
        persistentVolumeClaim:
          claimName: my-pvc
  volumeClaimTemplates:
  - metadata:
      name: my-volume
    spec:
      accessModes:
      - ReadWriteMany
      resources:
        requests:
          storage: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: large-systems-django-service
spec:
  type: NodePort
  selector:
    app: large-systems-django
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
