K8s/Bonus/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: large-systems-django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: large-systems-django.com
    http:
      paths:
      - path: /large-systems-django
        pathType: Prefix
        backend:
          service:
            name: large-systems-django-service
            port:
              name: http
